--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,4 +1,3 @@
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
-<small><script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=pWPP3H6tu6piSitaO1ly8AJ_73sTJ9bEIzk5Pzekk6o&cl=ffffff&w=a"></script></small>
+<small><small><script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=pWPP3H6tu6piSitaO1ly8AJ_73sTJ9bEIzk5Pzekk6o&cl=ffffff&w=a"></script></small></small>
 <!-- end custom footer snippets -->
