--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -35,4 +35,9 @@
 </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
+
+  <head>
+    ...
+    <link rel="shortcut icon" type="images/favicon.jpg" href="favicon.jpg">
+  </head>
 <!-- end custom head snippets -->
