--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -38,6 +38,6 @@
 
   <head>
     ...
-    <link rel="shortcut icon" type="images/jpg" href="favicon.jpg">
+    <link rel="shortcut icon" type="images/png" href="favicon.jpg">
   </head>
 <!-- end custom head snippets -->
