--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -36,8 +36,5 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
 
-  <head>
-    ...
-    <link rel="shortcut icon" type="images/png" href="favicon.jpg">
-  </head>
+<link rel="shortcut icon" type="images/png" href="favicon.png">
 <!-- end custom head snippets -->
