--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -25,7 +25,7 @@
 <meta name="msapplication-config" content="{{ base_path }}/images/browserconfig.xml?v=M44lzPylqQ">
 <meta name="theme-color" content="#ffffff">
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
-<link rel="shortcut icon" type="images/png" href="favicon.png">
+<link rel="shortcut icon" type="images/png" href="/images/favicon.png">
 
 <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
 <script type="text/x-mathjax-config">
