--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -20,8 +20,10 @@
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
-  background-color: $lighter-gray;
-  border-top: 1px solid $light-gray;
+  background-color: mix(#000, $background-color, 30%);
+  border-top: mix(#fff, $background-color, 20%);
+  /*background-color: $lighter-gray;
+  border-top: 1px solid $light-gray;*/
 
   footer {
     @include clearfix;
