--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -257,7 +257,7 @@
     padding: 5px;
     border: 1px solid $border-color;
     border-radius: $border-radius;
-    background: #fff;
+    background: #5B6780;;
     box-shadow: 0 0 10px rgba(#000, 0.25);
 
     a {
