--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -21,7 +21,9 @@
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
-  background-color: mix(#000, $background-color, 30%);
+   
+  background-color: $gray;
+  /*background-color: mix(#000, $background-color, 30%);*/
   border-top: mix(#fff, $background-color, 20%);
 
   footer {
