--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -22,8 +22,8 @@
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
    
-  background-color: $gray;
-  /*background-color: mix(#000, $background-color, 30%);*/
+   /*background-color: $gray;*/
+  background-color: mix(#000, $background-color, 30%);
   border-top: mix(#fff, $background-color, 20%);
 
   footer {
