--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -293,7 +293,8 @@ body:hover .visually-hidden button {
   position: relative;
   width: $navicon-width;
   height: $navicon-height;
-  background: $background-color;
+  background: #fff;
+  /*background: $background-color;*/
   margin: auto;
   -webkit-transition: 0.3s;
   transition: 0.3s;
