--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -167,7 +167,8 @@
   list-style-type: none;
   border: 1px solid $border-color;
   border-radius: $border-radius;
-  background: #5B6780;
+  background: #fff;
+  /*background: #5B6780;*/
   z-index: -1;
   box-shadow: 0 0 10px rgba(#000, 0.25);
   cursor: default;
@@ -208,7 +209,9 @@
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px;
-    border-color: #5B6780 transparent;
+     border-color: #fff transparent;
+     /*
+    border-color: #5B6780 transparent;*/
     z-index: 1;
 
     @include breakpoint($large) {
